--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;;0,800;0,900;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,800;0,900;1,300&display=swap');
 
 * {
   box-sizing: border-box;
@@ -16,7 +16,7 @@ img {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
   padding: 0 30px;
 }
@@ -55,22 +55,50 @@ ul {
 
 .navbar ul {
   display: flex;
-  gap: 16px;
-}
-
-.header {
-  min-height: 480px;
+  gap: 30px;
 }
 
 .header .container {
   display: flex;
-  height: 100%;
   justify-content: space-between;
   align-items: center;
+  padding: 100px 30px;
 }
 
 .header h1 {
   font-size: 48px;
   font-weight: 800;
   color: #f9faf8;
+}
+
+.header p {
+  color: #e5e7eb;;
+}
+
+.header .content {
+  flex: 1;
+  margin-right: 120px;
+}
+
+.header .image {
+  color: #f9faf8;
+  flex: 1;
+  min-height: 100%;
+  text-align: center;
+  background-color: gray;
+}
+
+.header button {
+  color: #f9faf8;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: #3882f6;
+  border-radius: 8px;
+  border: 0;
+  padding: 8px 32px;
+  margin-top: 8px;
+}
+
+.footer {
+  text-align: center;
 }
